# task_with_python_argparse

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/task/: cli.py  log.py  models.py  repository.py  runners.py  settings.py  validation.py
